# code-boilerplate

./: .gitignore  .pre-commit-config.yaml  Dockerfile.dev  README.md  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: lint_format.yml
